# Agentic-Programming

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentic/: __init__.py  agent.py  cli.py  context.py  function.py  llm.py  meta_function.py  runtime.py  session.py
agentic/apps/: __init__.py
agentic/functions/: __init__.py  _utils.py  agent_loop.py  deep_work.py  general_action.py  parse_action.py  wait.py
agentic/mcp/: server.py
agentic/meta_functions/: __init__.py  _helpers.py  create.md  create.py  create_app.py  edit.py  (+2 more)
cli/: package-lock.json  package.json
docs/: API.md  CONTEXT-STRATEGY.md  CONTEXT-v3.md  DESIGN.md  GETTING_STARTED.md  INTEGRATION_CLAUDE_CODE.md  INTEGRATION_OPENCLAW.md  README_CN.md  README_JA.md  provider-token-tracking.md
examples/: claude_demo.py  code_review.py  data_analysis.py  gui_automation.py  main.py  meta_chain.py  meta_demo.py  openclaw_routing.py  quickstart.py
harness/: __init__.py
openprogram/: __init__.py  cli.py  cli_chat.py  cli_ink.py  cli_tui.py  setup_wizard.py  tts.py
skill/: SKILL.md
tests/: _edit_test_helpers.py  conftest.py  test_async.py  test_chain.py  test_context.py  test_error_recovery.py  test_follow_up.py  test_meta.py  test_persistence.py  test_programmer.py  test_provider_anthropic.py  test_provider_cli.py  test_provider_detection.py  test_providers.py  test_public_api.py  test_recovery.py  test_render.py  test_runtime.py  test_session.py  test_test_framework.py
web/: MIGRATION.md  package-lock.json  package.json  tailwind.config.ts
(+974 files in other folders)
